# v 1.1.2.0
 + Added code-completion support in the Python editors, powered on `jedi`
 * Perform meta preparing even if 'Check PE-headers' is not set in the Settings.

# v 1.1.1.0
 + Added IDA for Linux support
 * Fixed issue #16 (GUI resize in high-dpi resolution/font size)
 * Fixed broken highlighting in python editor
 * VM deployment script can get configuration path form the commandline

# v 1.1.0.9
 * x64dbg's SDK and testing bundle are updated to snapshot on snapshot_2016-09-18_01-22

# v 1.1.0.8
 + Now the data can be transferred from debug-backend-side to IDA using __result__ variable

# v 1.1.0.7
 * Fixed issue #8
 + New options for python editor added: font (+size), tab size
 + Now Memory choose dialog allows to specify region size by "size" and "VA to" on manual select
 + Now Memory choose dialog allows to import some memory pages with overrided "RWE" protect using context menu
 * Manual memory range validation fixed in Memory choose dialog
 + New shortcut Alt+Shift+R is added for "Synchronize now" feature

# v 1.1.0.6
 + IDA's local variables (structs only) syncronization as comment is added
 * Fixed: issue #5

# v 1.1.0.4
 * x64dbg backend updated to snapshot on 2016-05-29_01-10

# v 1.1.0.3
 + Support of IDA 6.9 is added
 + Support of IDA: 64-bit targets is added
 + Support of OllyDbg2.01 dbg-backend is added
 + Support of x64dbg (x86/x86_64) dbg-backend is added
 * Wrapper for python backends is refactored
 * Fixed: RCP protocol (improved stability)
 * Anti-debug: removed classnames/window names of helper windows

# v 1.0.0.8
 + Comments syncronization implemented (has configuration)
 + PyCharm remote debug script added
 * Preparing for x64-bit support
 * Preparing for Qt5 (IDA6.9>)
 * Optimized skipping of dummy names
 * Olly1.1: protobuf message logging implemented
 * Useful links were added to README.md
 + Slides added

# v 1.0.0.7
 + Added loading dummy database functionality

# v 1.0.0.6