@@ -20,7 +20,8 @@
 
 namespace {
 
-DWORD pyExecExceptionFilter(DWORD code, _EXCEPTION_POINTERS* ep)
+#if !defined(__unix__) && !defined(__linux__)
+quint32 pyExecExceptionFilter(quint32 code, _EXCEPTION_POINTERS* ep)
 {
 	// FIXME
 	/*PyObject* msg = PyString_FromFormat("An exception occurred, code: 0x%x", code);
@@ -28,6 +29,7 @@ DWORD pyExecExceptionFilter(DWORD code, _EXCEPTION_POINTERS* ep)
 	Py_XDECREF(msg);*/
 	return EXCEPTION_EXECUTE_HANDLER;
 }
+#endif // !defined(__unix__) && !defined(__linux__)
 
 // grabbed from https://github.com/idapython/src
 class gil_lock_t
@@ -87,7 +89,7 @@ private:
     }																						\
   } while ( false )
 
-
+#if !defined(__unix__) && !defined(__linux__)
 bool safeRunStringImpl(const std::string& script, bool& exceptionOccured, std::string& error)
 {
 	bool rv = true;
@@ -200,6 +202,7 @@ bool pyTraceback_AsString(PyObject* exc_tb, std::string& result)
 	Py_XDECREF(obResult);
 	return true;
 }
+#endif // !defined(__unix__) && !defined(__linux__)
 
 } // anonymous
 
@@ -230,6 +233,7 @@ bool init(QString& error)
 	return true;
 }
 
+#if !defined(__unix__) && !defined(__linux__)
 bool safeRunString(const std::string& script, bool& exceptionOccured, std::string& error)
 {
 	exceptionOccured = false;
@@ -240,6 +244,7 @@ bool safeRunString(const std::string& script, bool& exceptionOccured, std::strin
 
 	return safeRunStringImpl(script, exceptionOccured, error);
 }
+#endif // !defined(__unix__) && !defined(__linux__)
 
 namespace jedi {
 
@@ -300,7 +305,7 @@ bool getQStringFromPyUnicode(PyObject* o, QString& rv)
 	if (!o || !PyUnicode_Check(o))
 		return false;
 
-	PyPTR pyUtf8Str = PyUnicode_AsUTF8String(o);
+    PyPTR pyUtf8Str(PyUnicode_AsUTF8String(o));
 	if (!pyUtf8Str)
 		return false;
 
@@ -331,14 +336,14 @@ QString getErrorInfo()
 		}
 		else if (val && PyUnicode_Check(val))
 		{
-			PyPTR pyUTF8str = PyUnicode_AsUTF8String(val);
+            PyPTR pyUTF8str(PyUnicode_AsUTF8String(val));
 			if (pyUTF8str && PyString_Check(pyUTF8str))
 				msg = QString::fromUtf8(PyString_AsString(pyUTF8str));
 		}
 	}
 	if (exc)
 	{
-		PyPTR tmp = PyObject_GetAttrString(exc, "__name__");
+        PyPTR tmp(PyObject_GetAttrString(exc, "__name__"));
 		rv = PyString_AsString(tmp);
 	}
 	if (!msg.isEmpty())
@@ -397,36 +402,36 @@ bool get_completions(const QString& script,
 
 	const QByteArray& ba = script.toUtf8();
 
-	PyPTR pySource = PyString_FromStringAndSize(ba.data(), ba.size());
+    PyPTR pySource(PyString_FromStringAndSize(ba.data(), ba.size()));
 	if (!pySource)
 	{
 		error = "Cannot create py`str` from passed script value\n" + getErrorInfo();
 		return false;
 	}
 
-	PyPTR pyLine = PyInt_FromLong(zline + 1);
-	PyPTR pyColumn = PyInt_FromLong(zcol);
+    PyPTR pyLine(PyInt_FromLong(zline + 1));
+    PyPTR pyColumn(PyInt_FromLong(zcol));
 
-	PyPTR pykwARGS = PyDict_New();
+    PyPTR pykwARGS(PyDict_New());
 	PyDict_SetItemString(pykwARGS, "source", pySource);
 	PyDict_SetItemString(pykwARGS, "line", pyLine);
 	PyDict_SetItemString(pykwARGS, "column", pyColumn);
 
-	PyPTR pyARGS = PyTuple_New(0);
-	PyPTR pyJediClassInstance = PyObject_Call(pyJediScriptClass, pyARGS, pykwARGS);
+    PyPTR pyARGS(PyTuple_New(0));
+    PyPTR pyJediClassInstance(PyObject_Call(pyJediScriptClass, pyARGS, pykwARGS));
 	if (!pyJediClassInstance)
 	{
 		error = "Cannot create a `jedi.Script` instance\n" + getErrorInfo();
 		return false;
 	}
 
-	PyPTR pyCompletionsFn = PyObject_GetAttrString(pyJediClassInstance, "completions");
+    PyPTR pyCompletionsFn(PyObject_GetAttrString(pyJediClassInstance, "completions"));
 	if (!pyCompletionsFn)
 	{
 		error = "Cannot get `jedi.Script.completions function\n" + getErrorInfo();
 		return false;
 	}
-	PyPTR pyCompletions = PyObject_CallObject(pyCompletionsFn, NULL);
+    PyPTR pyCompletions(PyObject_CallObject(pyCompletionsFn, NULL));
 	if (!pyCompletions || !PyList_Check(pyCompletions))
 	{
 		error = "Cannot get completions\n" + getErrorInfo();
@@ -444,19 +449,19 @@ bool get_completions(const QString& script,
 		}
 
 		QString completionStr;
-		PyPTR pyCompletion = PyObject_GetAttrString(pyItem, "name");
+        PyPTR pyCompletion(PyObject_GetAttrString(pyItem, "name"));
 		if (getQStringFromPyUnicode(pyCompletion, completionStr))
 			completions.append(completionStr);
 	}
 
-	PyPTR pyCallSigsFn = PyObject_GetAttrString(pyJediClassInstance, "call_signatures");
+    PyPTR pyCallSigsFn(PyObject_GetAttrString(pyJediClassInstance, "call_signatures"));
 	if (!pyCallSigsFn)
 	{
 		error = "Cannot get `jedi.Script.call_signatures` function\n" + getErrorInfo();
 		return false;
 	}
 
-	PyPTR pyCallSigList = PyObject_CallObject(pyCallSigsFn, NULL);
+    PyPTR pyCallSigList(PyObject_CallObject(pyCallSigsFn, NULL));
 	if (!pyCallSigList || !PyList_Check(pyCallSigList))
 	{
 		error = "Cannot get CALL signatures\n" + getErrorInfo();
@@ -477,17 +482,17 @@ bool get_completions(const QString& script,
 		::jedi::SignatureMatch& sm = signatureMatches.back();
 
 		do {
-			PyPTR pyType = PyObject_GetAttrString(pyCS, "type");
+            PyPTR pyType(PyObject_GetAttrString(pyCS, "type"));
 			getQStringFromPyUnicode(pyType, sm.type);
 		} while (0);
 			
 		do {
-			PyPTR pyName = PyObject_GetAttrString(pyCS, "name");
+            PyPTR pyName(PyObject_GetAttrString(pyCS, "name"));
 			getQStringFromPyUnicode(pyName, sm.name);
 		} while (0);
 
 		do {
-			PyPTR pyIndex = PyObject_GetAttrString(pyCS, "index");
+            PyPTR pyIndex(PyObject_GetAttrString(pyCS, "index"));
 			if (!pyIndex)
 				break;
 
@@ -498,10 +503,10 @@ bool get_completions(const QString& script,
 		} while (0);
 
 		do {
-			PyPTR pyRawDoc = PyObject_GetAttrString(pyCS, "raw_doc");
+            PyPTR pyRawDoc(PyObject_GetAttrString(pyCS, "raw_doc"));
 			if (!pyRawDoc || !PyUnicode_Check(pyRawDoc))
 				break;
-			PyPTR pyUtf8RawDoc = PyUnicode_AsUTF8String(pyRawDoc);
+            PyPTR pyUtf8RawDoc(PyUnicode_AsUTF8String(pyRawDoc));
 			if (!pyUtf8RawDoc)
 				break;
 			if (const char* crawDoc = PyString_AsString(pyUtf8RawDoc))
@@ -509,7 +514,7 @@ bool get_completions(const QString& script,
 		} while (0);
 
 		do {
-			PyPTR pyParams = PyObject_GetAttrString(pyCS, "params");
+            PyPTR pyParams(PyObject_GetAttrString(pyCS, "params"));
 			if (!pyParams || !PyList_Check(pyParams.data()))
 				break;
 				
@@ -526,12 +531,12 @@ bool get_completions(const QString& script,
 				::jedi::FuncArg arg;
 
 				do {
-					PyPTR pyName = PyObject_GetAttrString(pyParam, "name");
+                    PyPTR pyName(PyObject_GetAttrString(pyParam, "name"));
 					getQStringFromPyUnicode(pyName, arg.name);
 				} while (0);
 
 				do {
-					PyPTR pyDescription = PyObject_GetAttrString(pyParam, "description");
+                    PyPTR pyDescription(PyObject_GetAttrString(pyParam, "description"));
 					getQStringFromPyUnicode(pyDescription, arg.description);
 				} while (0);
 
